ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: games-ingress
  namespace: games
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /snakegame
        pathType: Prefix
        backend:
          service:
            name: snake-game-svc
            port:
              number: 80
      - path: /2048
        pathType: Prefix
        backend:
          service:
            name: game-2048-svc
            port:
              number: 80
